<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/home" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_report"
        android:title="@string/reports" />
    <item
        android:id="@+id/budgetFragment"
        android:icon="@drawable/ic_money_bag"
        android:title="@string/budget" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings" />
</menu>
