<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8FF"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_gradient_primary"
        android:padding="16dp"
        android:src="@drawable/ic_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/welcome_back"
        android:textColor="#131B2E"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/email"
        android:background="@drawable/bg_input_field"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/bg_input_field"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#006D36"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/log_in"
        android:backgroundTint="#006D36"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        android:layout_marginTop="40dp"
        app:cornerRadius="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textEnd"
        app:iconPadding="12dp"
        app:iconTint="@color/white"/>
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with"
        android:textColor="#131B2E"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#006D36"
        android:textColor="@color/white"
        android:text="@string/google"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
        app:layout_constraintTop_toBottomOf="@id/tvContinue"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
